unpackaged/objects/Old_Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONNECT</fullName>
                </value>
                <value>
                    <fullName>CPC Web App</fullName>
                </value>
                <value>
                    <fullName>Innovation Center</fullName>
                </value>
                <value>
                    <fullName>MDPCP</fullName>
                </value>
                <value>
                    <fullName>Reusable Framework</fullName>
                </value>
                <value>
                    <fullName>CPC BIR</fullName>
                </value>
                <value>
                    <fullName>IC BIR</fullName>
                </value>
                <value>
                    <fullName>QMAT</fullName>
                </value>
                <value>
                    <fullName>QMAT Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Feature__c</fullName>
        <label>SR Feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>Educational Materials &amp; Reports</fullName>
                </value>
                <value>
                    <fullName>User Accounts</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                </value>
                <value>
                    <fullName>Report(s)</fullName>
                </value>
                <value>
                    <fullName>Submission Period(s)</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Type__c</fullName>
        <label>SR Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SR_Feature__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update an existing role</fullName>
                </value>
                <value>
                    <fullName>Disable an existing role</fullName>
                </value>
                <value>
                    <fullName>Add a new attribute for a role</fullName>
                </value>
                <value>
                    <fullName>Update attribute for a role</fullName>
                </value>
                <value>
                    <fullName>Remove an attribute for a role</fullName>
                </value>
                <value>
                    <fullName>Re-order of attribute(s)</fullName>
                </value>
                <value>
                    <fullName>Onboard a new application to IC</fullName>
                </value>
                <value>
                    <fullName>Update an existing application</fullName>
                </value>
                <value>
                    <fullName>Disable an existing application</fullName>
                </value>
                <value>
                    <fullName>Enable an application</fullName>
                </value>
                <value>
                    <fullName>Setup shell portlet</fullName>
                </value>
                <value>
                    <fullName>Modify role appearance order</fullName>
                </value>
                <value>
                    <fullName>Add model participant(s)</fullName>
                </value>
                <value>
                    <fullName>Update model participant information</fullName>
                </value>
                <value>
                    <fullName>Disable model participant(s)</fullName>
                </value>
                <value>
                    <fullName>Provide report data</fullName>
                </value>
                <value>
                    <fullName>Request a new feature</fullName>
                </value>
                <value>
                    <fullName>Modify an existing feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Old Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Old Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>